refactor: getFirst 수정